# fin_parser

./: .gitignore  README.md  pyproject.toml
docs/: pdf-parser@.service
src/app/: __main__.py
src/app/api/: server.py
src/app/parsers/: base.py  generic.py  registry.py  tbank_cashflow.py
src/app/utils/: money.py  pdf.py
tests/: test_money.py  test_tbank_parser_snippet.py
