[project]
name = "pdf-parser-service"
version = "0.1.0"
description = "HTTP API + CLI for parsing PDFs into structured JSON (extensible parser registry)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Michael" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pdfplumber>=0.11",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
pdf-parser = "app.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = []
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
